--- a/style.css
+++ b/style.css
@@ -133,15 +133,21 @@ html{
 }
 
 .input{
-    width: 20%;
+    width: 32.5%;
+    border: black solid 1px;
+    border-radius: 5px 5px;
+    font-size: 11px;
     
 }
 
 .btnback{
-    width: 30%;
+    width: 33%;
     position: absolute;
     bottom: 0px;
     left: 112px;
+    width: 30%;
+    border: black solid 1px;
+    border-radius: 5px 5px;
 }
 
 .hidden{
@@ -297,7 +303,10 @@ html{
     }
     
     .input{
-        width: 20%;
+        width: 32.5%;
+    border: black solid 1px;
+    border-radius: 5px 5px;
+    font-size: 11px;
         
     }
     
@@ -348,7 +357,7 @@ html{
             align-items: center; 
              justify-content: center;
             width: 50%;
-            margin: 10% auto;
+            margin: 40% auto;
             vertical-align: middle;
              background-color: rgb(231, 231, 225);  
              z-index: 2;
@@ -461,8 +470,10 @@ html{
         }
         
         .input{
-            width: 20%;
-            
+            width: 32.5%;
+    border: black solid 1px;
+    border-radius: 5px 5px;
+    font-size: 11px;
         }
         
         .btnback{
